--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.felix</groupId>
+                <artifactId>org.apache.felix.http.jetty</artifactId>
+                <version>${version.apache.felix.http}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.felix</groupId>
                 <artifactId>org.apache.felix.http.proxy</artifactId>
                 <version>${version.apache.felix.http}</version>
             </dependency>
