--- a/itests/smoke/karaf/pom.xml
+++ b/itests/smoke/karaf/pom.xml
@@ -29,13 +29,13 @@
     
     <parent>
         <groupId>org.jboss.gravia</groupId>
-        <artifactId>gravia-itests</artifactId>
+        <artifactId>gravia-itests-smoke</artifactId>
         <version>1.1.0.Beta26-SNAPSHOT</version>
     </parent>
 
-    <artifactId>gravia-itests-karaf</artifactId>
+    <artifactId>gravia-itests-smoke-karaf</artifactId>
     
-    <name>Gravia :: Integration Tests :: Karaf</name>
+    <name>Gravia :: Integration Tests :: Smoke :: Karaf</name>
     
     <!-- Properties -->
     <properties>
@@ -47,7 +47,7 @@
         <!-- Provided Dependencies -->
         <dependency>
 	        <groupId>org.jboss.gravia</groupId>
-	        <artifactId>gravia-itests-common</artifactId>
+	        <artifactId>gravia-itests-smoke-common</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
@@ -149,7 +149,7 @@
                     <redirectTestOutputToFile>false</redirectTestOutputToFile>
                     <reportNameSuffix>karaf</reportNameSuffix>
                     <dependenciesToScan>
-                        <dependency>org.jboss.gravia:gravia-itests-common</dependency>
+                        <dependency>org.jboss.gravia:gravia-itests-smoke-common</dependency>
                     </dependenciesToScan>
                     <systemPropertyVariables>
                         <log4j.configuration>file://${basedir}/src/test/resources/logging.properties</log4j.configuration>
