--- a/itests/smoke/tomcat/pom.xml
+++ b/itests/smoke/tomcat/pom.xml
@@ -27,13 +27,13 @@
     
     <parent>
         <groupId>org.jboss.gravia</groupId>
-        <artifactId>gravia-itests</artifactId>
+        <artifactId>gravia-itests-smoke</artifactId>
         <version>1.1.0.Beta26-SNAPSHOT</version>
     </parent>
 
-    <name>Gravia :: Integration Tests :: Tomcat</name>
+    <name>Gravia :: Integration Tests :: Smoke :: Tomcat</name>
     
-    <artifactId>gravia-itests-tomcat</artifactId>
+    <artifactId>gravia-itests-smoke-tomcat</artifactId>
 
 	<!-- Properties -->
     <properties>
@@ -46,7 +46,7 @@
         <!-- Provided Dependencies -->
         <dependency>
 	        <groupId>org.jboss.gravia</groupId>
-	        <artifactId>gravia-itests-common</artifactId>
+	        <artifactId>gravia-itests-smoke-common</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
@@ -150,7 +150,7 @@
 			        <redirectTestOutputToFile>false</redirectTestOutputToFile>
                     <reportNameSuffix>tomcat</reportNameSuffix>
                     <dependenciesToScan>
-                        <dependency>org.jboss.gravia:gravia-itests-common</dependency>
+                        <dependency>org.jboss.gravia:gravia-itests-smoke-common</dependency>
                     </dependenciesToScan>
 			        <systemPropertyVariables>
                         <!-- log4j.configuration>file://${basedir}/src/test/resources/logging.properties</log4j.configuration -->
