--- a/itests/basic/pom.xml
+++ b/itests/basic/pom.xml
@@ -27,9 +27,9 @@
         <version>1.1.0.Beta26-SNAPSHOT</version>
     </parent>
 
-    <name>Gravia :: Integration Tests :: Smoke</name>
+    <name>Gravia :: Integration Tests :: Basic</name>
     
-    <artifactId>gravia-itests-smoke</artifactId>
+    <artifactId>gravia-itests-basic</artifactId>
 	<packaging>pom</packaging>
 	
 	<modules>
@@ -39,8 +39,4 @@
         <module>wildfly</module>
 	</modules>
 	
-    <build>
-        <plugins>
-        </plugins>
-    </build>
 </project>
