--- a/itests/smoke/common/pom.xml
+++ b/itests/smoke/common/pom.xml
@@ -43,6 +43,11 @@
         </dependency>
         <dependency>
             <groupId>org.jboss.gravia</groupId>
+            <artifactId>gravia-itests-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.gravia</groupId>
             <artifactId>gravia-provision</artifactId>
             <version>${project.version}</version>
         </dependency>
