--- a/container/karaf/pom.xml
+++ b/container/karaf/pom.xml
@@ -33,6 +33,7 @@
     <name>Gravia :: Container :: Karaf</name>
     
     <modules>
+        <module>managed</module>
         <module>patch</module>
     </modules>
     
