--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
         <version.jboss.arquillian.core>1.1.2.Final-wildfly-1</version.jboss.arquillian.core>
         <version.jboss.arquillian.osgi>2.1.0.CR15</version.jboss.arquillian.osgi>
         <version.jboss.arquillian.tomcat>1.0.0.CR6</version.jboss.arquillian.tomcat>
+        <version.jboss.modules>1.3.0.Final</version.jboss.modules>
         <version.jboss.osgi.metadata>4.0.0.CR1</version.jboss.osgi.metadata>
         <version.jboss.shrinkwrap>1.1.2</version.jboss.shrinkwrap>
         <version.jboss.shrinkwrap.resolver>2.0.0</version.jboss.shrinkwrap.resolver>
@@ -256,6 +257,11 @@
                 <groupId>org.jboss.arquillian.container</groupId>
                 <artifactId>arquillian-tomcat-managed-7</artifactId>
                 <version>${version.jboss.arquillian.tomcat}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.modules</groupId>
+                <artifactId>jboss-modules</artifactId>
+                <version>${version.jboss.modules}</version>
             </dependency>
             <dependency>
                 <groupId>org.jboss.osgi.metadata</groupId>
