--- a/container/tomcat/managed/pom.xml
+++ b/container/tomcat/managed/pom.xml
@@ -33,7 +33,7 @@
     <artifactId>gravia-container-tomcat-managed</artifactId>
     <packaging>bundle</packaging>
     
-    <name>Fabric8 :: Container :: Tomcat :: Managed</name>
+    <name>Gravia :: Container :: Tomcat :: Managed</name>
 
     <dependencies>
         <dependency>
@@ -58,7 +58,7 @@
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Activator>org.jboss.gravia.runtime.ModuleActivatorBridge</Bundle-Activator>
-                        <Module-Activator>io.fabric8.container.tomcat.internal.TomcatContainerActivator</Module-Activator>
+                        <Module-Activator>org.jboss.gravia.container.tomcat.internal.TomcatContainerActivator</Module-Activator>
                     </instructions>
                 </configuration>
             </plugin>
