--- a/container/tomcat/pom.xml
+++ b/container/tomcat/pom.xml
@@ -38,6 +38,7 @@
     
     <modules>
         <module>extension</module>
+        <module>managed</module>
         <module>patch</module>
         <module>support</module>
         <module>webapp</module>
