--- a/container/wildfly/patch/pom.xml
+++ b/container/wildfly/patch/pom.xml
@@ -63,6 +63,12 @@
         </dependency>
         <dependency>
             <groupId>org.jboss.gravia</groupId>
+            <artifactId>gravia-container-wildfly-managed</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.gravia</groupId>
             <artifactId>gravia-process-api</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
