--- a/container/wildfly/pom.xml
+++ b/container/wildfly/pom.xml
@@ -38,6 +38,7 @@
     
     <modules>
         <module>extension</module>
+        <module>managed</module>
         <module>patch</module>
     </modules>
 </project>
